--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Majidtq.github.io/Movies",
+  "homepage": "http://Majidtq.github.io/Movies",
   "name": "usepopcorn",
   "version": "0.1.0",
   "private": true,
